test/typecheck/pass/vector_synonym_cast.sail

typedef vecsyn = vector<0,1,dec,bit>

val cast vector<1,1,dec,bit> -> vector<0,1,dec,bit> effect pure test_cast

val vector<1,1,dec,bit> -> vecsyn effect pure test

function test x = x
