test/typecheck/fail/vector_arity.sail

val vector<0,5,inc,bit,bit> -> vector<0,5,inc,bit,bit> effect pure test

function vector<0,5,inc,bit,bit> test x = x